--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ MyQtProjects/InterviewCode/main.cpp
 MyQtProjects/QtProducerConsumer/debug/moc_threadmanager.cpp
 MyQtProjects/QtWorkerThread/Makefile
 MyQtProjects/QtWorkerThread/debug/moc_mainwindow.cpp
+MyQtProjects/QtWorkerThread/debug/moc_worker.cpp
