--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ MyQtProjects/QtProducerConsumer/debug/moc_threadmanager.cpp
 MyQtProjects/QtWorkerThread/Makefile
 MyQtProjects/QtWorkerThread/debug/moc_mainwindow.cpp
 MyQtProjects/QtWorkerThread/debug/moc_worker.cpp
+MyQtProjects/build-WorkerThread-Clone_of_Desktop_Qt_5_7_0_MSVC2013_64bit-Debug/Makefile
+MyQtProjects/build-WorkerThread-Clone_of_Desktop_Qt_5_7_0_MSVC2013_64bit-Debug/debug/moc_mainwindow.cpp
