--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,10 @@ MyQtProjects/build-WorkerThread-Clone_of_Desktop_Qt_5_7_0_MSVC2013_64bit-Debug/d
 MyQtProjects/WorkerThread/Makefile
 MyQtProjects/ConsoleAppTemplateWithUTs/UnitTests/target_wrapper.bat
 MyQtProjects/ConsoleAppTemplateWithUTs/build/debug/theLib.exp
+MyQtProjects/NMEA_WorkerThread/Makefile
+MyQtProjects/NMEA_WorkerThread/UnitTests/Makefile
+MyQtProjects/NMEA_WorkerThread/UnitTests/target_wrapper.bat
+MyQtProjects/NMEA_WorkerThread/build/debug/.moc/moc_bytequeuehelperut.cpp
+MyQtProjects/NMEA_WorkerThread/build/debug/theLib.exp
+MyQtProjects/NMEA_WorkerThread/cppSrc/Makefile
+MyQtProjects/NMEA_WorkerThread/main/Makefile
