--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@ MyQtProjects/NMEA_WorkerThread/build/debug/theLib.exp
 MyQtProjects/PuzzlePath/UnitTests/target_wrapper.bat
 MyQtProjects/build-PuzzlePath-Clone_of_Desktop_Qt_5_7_0_MSVC2013_64bit-Debug/build/debug/theLib.exp
 MyQtProjects/build-PuzzlePath-Clone_of_Desktop_Qt_5_7_0_MSVC2013_64bit-Debug/main/Makefile
+MyQtProjects/PuzzlePath/out_Puzzle1.txt
+MyQtProjects/PuzzlePath/out_Puzzle2.txt
