--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,5 @@ MyQtProjects/build-GridViewTest-Desktop_Qt_5_7_0_MSVC2013_64bit-Debug/
 MyQtProjects/build-qmlTests-Clone_of_Desktop_Qt_5_7_0_MSVC2013_64bit-Debug/
 
 MyQtProjects/build-qmlTestsTWO-Clone_of_Desktop_Qt_5_7_0_MSVC2013_64bit-Debug/
+
+MyQtProjects/CurveApp - As Sent To Curve/
